--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.16.4",
+		"mongodb": "^5.0.1",
 		"mongoose": "^6.9.1"
 	},
 	"repository": {
